Closed Bug 552003 Opened 16 years ago Closed 16 years ago

Passing an empty mozIStorageBindingParamsArray does not error

Categories

(Core :: SQLite and Embedded Database Bindings, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a4

People

(Reporter: sdwilsh, Assigned: sdwilsh)

References

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

Passing an empty mozIStorageBindingParamsArray does not error but puts us in a weird state and asserts. We should check this when we bind it to the statement, and return an error if it is done.
Attached patch v1.0Splinter Review
Simple enough to fix...
Assignee: nobody → sdwilsh
Status: NEW → ASSIGNED
Attachment #432202 - Flags: review?(bugmail)
Also, asuth, you'll probably want to update your async patch to test and do this too.
Blocks: 536978
Priority: -- → P1
Blocks: 552092
Attachment #432202 - Flags: review?(bugmail) → review+
I'll set the target milestone right when it gets added later today... http://hg.mozilla.org/mozilla-central/rev/1df18e6b6e78
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Flags: in-litmus-
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a4
Keywords: dev-doc-needed
blocking2.0: ? → ---
Product: Toolkit → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: