Bug 552003 - Passing an empty mozIStorageBindingParamsArray does not error Throw instead of just asserting, which makes debugging this so much easier. r=asuth